--- a/biblioteca/Gemfile
+++ b/biblioteca/Gemfile
@@ -45,6 +45,7 @@ group :development, :test do
 end
 
 gem 'carrierwave', '~> 1.0'
+gem 'mini_magick'
 
 group :development do
   # Access an IRB console on exception pages or by using <%= console %> anywhere in the code.
