--- a/biblioteca/Gemfile
+++ b/biblioteca/Gemfile
@@ -46,6 +46,7 @@ end
 
 gem 'carrierwave', '~> 1.0'
 gem 'mini_magick'
+gem 'devise', '~> 4.2'
 
 group :development do
   # Access an IRB console on exception pages or by using <%= console %> anywhere in the code.
