--- a/biblioteca/Gemfile
+++ b/biblioteca/Gemfile
@@ -48,6 +48,7 @@ gem 'carrierwave', '~> 1.0'
 gem 'mini_magick'
 gem 'devise', '~> 4.2'
 gem 'devise-i18n'
+gem 'cancancan'
 
 group :development do
   # Access an IRB console on exception pages or by using <%= console %> anywhere in the code.
