--- a/biblioteca/Gemfile
+++ b/biblioteca/Gemfile
@@ -51,6 +51,8 @@ gem 'mini_magick'
 gem 'devise', '~> 4.2'
 gem 'devise-i18n'
 gem 'cancancan'
+gem 'simple_form'
+gem 'rails-i18n'
 
 group :development do
   # Access an IRB console on exception pages or by using <%= console %> anywhere in the code.
