--- a/biblioteca/Gemfile
+++ b/biblioteca/Gemfile
@@ -53,6 +53,7 @@ gem 'devise-i18n'
 gem 'cancancan'
 gem 'simple_form'
 gem 'rails-i18n'
+gem 'jquery-ui-rails'
 
 group :development do
   # Access an IRB console on exception pages or by using <%= console %> anywhere in the code.
