--- a/doadoronline/Gemfile
+++ b/doadoronline/Gemfile
@@ -36,6 +36,11 @@ gem 'jbuilder', '~> 2.5'
 gem 'adminlte2-rails'
 gem 'font-awesome-rails'
 gem 'simple_form'
+gem 'jquery-ui-rails'
+gem 'jquery-rails'
+gem 'devise', '~> 4.2'
+gem 'devise-i18n'
+gem 'cancancan'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
